# p2p-chat

./: Cargo.toml  README.md
src/: behaviour.rs  main.rs  message.rs
